# pkcli

./: Cargo.toml  LICENSE  README.md  build.rs  test-realm.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  lib.rs  main.rs
