[package]
name = "pkcli"
version = "1.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
vaultrs = "0.7.4"

# Profiles
[profile.dev]
opt-level = 0          # No optimization for faster compiles in dev
debug = true           # Enable debug info for better dev experience
incremental = true     # Enable incremental compilation for faster dev builds
overflow-checks = true # Enable overflow checks (helpful in dev)

[profile.release]
opt-level = 3           # High optimization level for performance
lto = "fat"             # Link Time Optimization for smaller, faster binaries
codegen-units = 1       # Compile as one unit to improve optimization
panic = "abort"         # Reduce binary size by aborting on panic
debug = false           # Disable debug info for smaller binary size
strip = true            # Strip symbols to reduce binary size further
overflow-checks = false # Disable overflow checks (usually for prod only)
